--- a/src/Cadbury/project.json
+++ b/src/Cadbury/project.json
@@ -1,19 +1,19 @@
-﻿{
-  "version": "1.0.0-*",
+{
   "buildOptions": {
-    "emitEntryPoint": true
+    "emitEntryPoint": true,
+    "define": [ "DEBUG", "TRACE" ]
   },
-
   "dependencies": {
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0"
-    }
+    },
+    "Microsoft.Extensions.Logging": "1.0.0"
   },
-
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50"
     }
-  }
+  },
+  "version": "1.0.0-*"
 }
